kano-peripherals (4.2.0-0) unstable; urgency=low

  * Fixed an issue where the sound module wouldn't be loaded when daemon crashed

 -- Team Kano <dev@kano.me>  Thu, 4 Oct 2018 17:54:00 +0100

kano-peripherals (4.1.0-0) unstable; urgency=low

  * Make touch orientation more stable in X

 -- Team Kano <dev@kano.me>  Thu, 26 Sep 2018 18:00:00 +0100

kano-peripherals (4.0.0-0) unstable; urgency=low

  * Added touch-detect tool
  * Switch to use DMA channel 10 for LED control

 -- Team Kano <dev@kano.me>  Fri, 1 Jun 2018 16:00:00 +0100

kano-peripherals (3.15.0-0) unstable; urgency=low

  * Re-enabled LED Speaker detection through kano-speakerleds
  * Fixed Python packages to be importable and not execute code at import
  * Added Python documentation tools for generating API docs

 -- Team Kano <dev@kano.me>  Fri, 19 Jan 2018 13:36:44 +0100

kano-peripherals (3.14.0-0) unstable; urgency=low

  * Changed battery detection on boot, to work with new splash animation
  * Fixed traceback when importing from wrappers (fixes audio)
  * Added a test mode for the Low Battery on boot functionality

 -- Team Kano <dev@kano.me>  Wed, 06 Dec 2017 14:06:44 +0100

kano-peripherals (3.13.0-0) unstable; urgency=low

  * Added functionality to detect CKCs, CKC v1, CKC v1.1
  * Hidden RC from turn-off-hat-leds service, fire and forget

 -- Team Kano <dev@kano.me>  Fri, 28 Sep 2017 18:36:45 +0100

kano-peripherals (3.11.0-0) unstable; urgency=low

  * Add support for poweroff on boot if battery is low
  * Refactored DBus services architecture with DeviceDiscovery
  * Added support for board hotplugging live
  * Supporting board hotplugging in CPU monitor animation
  * Added support for LED Speaker back
  * Various fixes to library controlling PiHat and PowerHat
  * Systemd unit file to turn off PiHat and LED Speaker lights

 -- Team Kano <dev@kano.me>  Mon, 17 May 2017 17:56:45 +0100

kano-peripherals (3.10.0-0) unstable; urgency=low

  * Add support for the new Kano Pi Hat
