@@ -7,7 +7,7 @@ override_dh_auto_build:
 	cd libs/pi_hat && cmake . && make
 	cd po && make messages.pot
 	cd po && make
-	cd touch-detect && ./build.sh
+	make touch-detect
 
 override_dh_fixperms:
 	dh_fixperms
