@@ -10,5 +10,7 @@ flake8-ignore =
     F841  # Local variable is assigned to but never used
     features/* ALL
     tests/* ALL
-	libs/pi_hat/examples/python/* ALL
-	kano-doc/* ALL
+    kano_peripherals/speaker_leds/driver/pwm_driver.py ALL
+    libs/pi_hat/examples/python/* ALL
+    kano-doc/* ALL
+    **/conanfile.py ALL
