@@ -1,0 +1,9 @@
+all: debug release
+
+release:
+	mkdir -p build/release
+	cd build/release && cmake -DCMAKE_BUILD_TYPE=Release ../.. && make
+
+debug:
+	mkdir -p build/debug
+	cd build/debug && cmake -DCMAKE_BUILD_TYPE=Debug ../.. && make
