@@ -1,3 +1,0 @@
-#!/bin/bash
-gcc -g touch-detect.c -o touch-detect -lX11 -lXi
-
