@@ -1,0 +1,23 @@
+/**
+ * touch_detect.h
+ *
+ * Copyright (C) 2018 Kano Computing Ltd.
+ * License: http://www.gnu.org/licenses/gpl-2.0.txt GNU GPLv2
+ *
+ * vim: filetype=cpp
+ *
+ * Detect if a touch device is present
+ *
+ */
+
+
+#pragma once
+
+
+namespace Kano
+{
+    namespace TouchDetect
+    {
+        bool isTouchSupported();
+    }
+}
