@@ -1,0 +1,4 @@
+# Conan Test Package
+
+This exists in order to test that the touch-detect package has been correctly
+configured for packaging.
